# m4

./: CMakeLists.txt  Makefile  make.sh
include/: definitions.hpp  files.hpp  user_data.hpp  utils.hpp
include/headers/: files.hpp  utils.hpp
include/zlc/: LICENSE
linking/include/glad/: glad.h
src/: config.cpp  files.cpp  glad.c  main.cpp  user_data.cpp  utils.cpp
